<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".LoginActivity.UI.LoginActivity">

    <TextView
        android:id="@+id/tvSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/singIn"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SI_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSingIn">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SI_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:endIconTint="@color/white"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/SI_user"
        app:layout_constraintStart_toStartOf="@+id/SI_user"
        app:layout_constraintTop_toBottomOf="@+id/SI_user">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/CBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/SI_password"
        app:layout_constraintTop_toBottomOf="@+id/SI_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SI_BtnSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/singIn"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvSingIn"
        app:layout_constraintStart_toStartOf="@+id/tvSingIn"
        app:layout_constraintTop_toBottomOf="@+id/SI_password" />

    <TextView
        android:id="@+id/SI_TVSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-thin"
        android:textSize="16sp"
        android:text="@string/singUp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/SI_BtnSingIn"
        app:layout_constraintStart_toStartOf="@+id/SI_BtnSingIn"
        app:layout_constraintTop_toBottomOf="@+id/SI_BtnSingIn" />


</androidx.constraintlayout.widget.ConstraintLayout>